<resources>
    <string name="app_name">Catendar</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_sort_by_priority">Priority</string>
    <string name="action_sort_by_deadline">Deadline</string>
    <string name="action_sort_by_duration">Duration</string>
    <string name="action_show_all">Show all</string>
    <string name="action_not_show_all">Show actually</string>

    <string-array name="views_array">
        <item>Calendar</item>
        <item>Task List</item>
        <item>Create task</item>
        <item>Create event</item>
        <item>Create week</item>
        <item>Create events group</item>
        <item>Delete events group</item>
        <item>Create plan</item>
        <item>Change events group</item>
    </string-array>
    <string name="menu">Menu</string>
    <string name="first_screen">Calendar</string>
    <string name="second_screen">Task List</string>
    <string name="third_screen">Create event</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>

    <string name="create_event_title">Create event</string>
    <string name="create_event_button">Create event</string>
    <string name="name_of_event_in_create_event">Event name</string>
    <string name="date_of_begin">Date of start of the event</string>
    <string name="date_of_end">Date of finish of the event</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="task_list">Task List</string>
    <string name="add_task">Create task</string>

    <string name="choose_event">Choose Event</string>
    <string name="name_of_task">Task name</string>
    <string name="default_event">Other</string>
    <string name="add_task_extra">add task</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <string name="is_done">Done</string>
    <string name="show_all">Show All</string>
    <string name="show_not_all">Show not done</string>

    <string name="current_week">Current week</string>
    <string name="next_week">Next week</string>
    <string name="other_week">Other week</string>
    <string name="put_date">Date on week(dd.mm.yyyy)</string>
    <string name="export">Export current week</string>
    <string name="show">Show exported weeks</string>

    <string name="connect">Connect</string>
    <string name="discover">Discover</string>
    <string name="register">Register</string>
    <string name="send">Send</string>

    <string name="template_name">Template name</string>
    <string name="add_event_extra">Add event</string>

    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

    <string name="start_time">Start(hh:mm)</string>
    <string name="finish_time">Finish(hh:mm)</string>

    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>

    <string name="delete">Delete</string>

    <string name="taskText">What you need to do?</string>
    <string name="priority">Priority:</string>
    <string name="duration">Time for this task:</string>
    <string name="startDate">Time when you can start:</string>
    <string name="finishTime">Deadline time:</string>
    <string name="finishDate">Deadline date:</string>
    <string name="context">Place where you can do this task:</string>
    <string name="comments">Some comments about this task</string>


    <string name="change">Change</string>

    <string name="task">Tasks:</string>
    <string name="createTask">Create Task</string>
    <string name="addTask">Add Task</string>
    <string name="date">Plan on</string>

    <string name="deletePlan">Delete this plan</string>
    <string name="changePlan">Change this plan</string>

    <string name="one">1</string>

    <string name="plan">Plan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_exported_weeks">ShowExportedWeeksActivity</string>
</resources>
