<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_deadline"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_deadline"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_duration"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_duration"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_priority"
        android:orderInCategory="100"
        android:title="@string/action_sort_by_priority"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_all"
        android:orderInCategory="100"
        android:title="@string/action_show_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_not_show_all"
        android:orderInCategory="100"
        android:title="@string/action_not_show_all"
        app:showAsAction="never"/>
</menu>