<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="39dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date"
            android:id="@+id/createPlanTextViewDate"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:id="@+id/createPlanButtonDate"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="onSetDate" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/task"
        android:id="@+id/CreateTaskTextViewTasks" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="374dp"
        android:id="@+id/createPlanListView"
        android:layout_weight="0.33" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:id="@+id/createPlanRelativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:id="@+id/createPlanButtonOK"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="onOKClickInPlan" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createTask"
            android:id="@+id/createPlanButtonCreateTask"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/createPlanButtonAddTask"
            android:onClick="onCreateTaskClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTask"
            android:id="@+id/createPlanButtonAddTask"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>