<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:id="@+id/ok_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onOkTaskClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/CancelButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onCancelTaskClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_event"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editParentEventText"
        android:layout_above="@+id/ok_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ok_button"
        android:layout_alignEnd="@+id/ok_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_extra"
        android:id="@+id/add_new_task"
        android:layout_above="@+id/Choose_event"
        android:layout_alignRight="@+id/Choose_event"
        android:layout_alignEnd="@+id/Choose_event"
        android:layout_alignLeft="@+id/Choose_event"
        android:layout_alignStart="@+id/Choose_event"
        android:onClick="onAddTaskClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_event"
        android:id="@+id/Choose_event"
        android:layout_alignTop="@+id/textView"
        android:layout_alignLeft="@+id/ok_button"
        android:layout_alignStart="@+id/ok_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="right"
        android:layout_above="@+id/add_new_task">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayoutInCreateTask">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTaskText"
            android:hint="@string/name_of_task">
        </EditText>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>