<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeEventText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/name_of_event_in_create_event" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:id="@+id/OKinChangeEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onOkClick"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/CancelButtonInChange"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onCancelClick"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/changeStartDate"
        android:layout_below="@+id/changeEventText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/changeDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:id="@+id/changeDate"
        android:layout_below="@+id/changeEventText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onSetDateClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:id="@+id/changeTime"
        android:layout_below="@+id/changeDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onSetTimeClick"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/changeStartTime"
        android:layout_below="@+id/changeStartDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/changesSeekBarOfEventLen"
        android:layout_toStartOf="@+id/OKinChangeEvent"
        android:layout_below="@+id/changeTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/durationValChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/durationChange"
        android:layout_alignTop="@+id/durationChange">
    </TextView>

    <TextView
        android:id="@+id/durationChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The duration of the event: "
        android:textStyle="bold"
        android:layout_below="@+id/changesSeekBarOfEventLen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewChange"
        android:layout_gravity="right"
        android:layout_above="@+id/OKinChangeEvent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/durationChange">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LinearLayoutInChangeEvent">
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/delete_event"
        android:onClick="onDeleteClick"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/CancelButtonInChange"
        android:layout_toEndOf="@+id/CancelButtonInChange" />
</RelativeLayout>